I set some parameters to avoid the window to move horizontally on mobile browsing

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -3,6 +3,14 @@ html{
     height: 100%;
 }
 
+html, body {
+  overflow-x: hidden;
+}
+
+body {
+  position: relative
+}
+
 #mapid{
   /* height: 50%;
   width: 100%; */
